fixed css to align with old commit

--- a/contact.css
+++ b/contact.css
@@ -107,7 +107,7 @@ h1, h2 {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
-    width: 100%;
+    max-width: 50%;
 }
 .search-icon{
     position: absolute;
@@ -120,7 +120,7 @@ h1, h2 {
     padding: 8px 10px 8px 35px; 
     border: 2px solid #bdc3c7; 
     
-    border-radius: 6px;
+    border-radius: 16px;
     text-align: center;
     box-sizing: border-box;
     transition: border-color 0.3s, box-shadow 0.3s;
@@ -188,6 +188,7 @@ h1, h2 {
 
 .search{
     display: flex;
+    gap:12px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -455,7 +456,7 @@ h1, h2 {
 
 .addContact button,
 .contactForm button,
-.buttonContainer button {
+.buttonContainer button, #searchButton {
     display: inline-flex; 
     align-items: center;
     justify-content: center;
@@ -485,6 +486,10 @@ h1, h2 {
     background-color: #e8f0fe !important;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3) !important;
     transform: translateY(0) !important;
+}
+.search {
+    display:flex;
+    flex-direction:row;
 }
 /* 
 body {
